fix: possible fix for mobile overflow

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -18,6 +18,7 @@
     justify-content: center;
     height: 100vh;
     z-index: 999;
+    overflow: hidden;
   }
 
   .Buttons {
@@ -33,6 +34,7 @@
     bottom: 0;
     right: 0;
     z-index: 1;
+    overflow: hidden;
   }
 }
 
